--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Tea Cozy</title>
-    <link rel="stylesheet" href="C:\Users\Polo\Documents\projects\Tea Cozy\resources\styles.css">
+    <link rel="stylesheet" href="./styles.css">
 
 </head>
 <body>
